--- a/popup/popup.html
+++ b/popup/popup.html
@@ -18,7 +18,7 @@
       <li>google中点击链接将会在新标签页打开</li>
     </ul>
     <button id="changeColor">改变背景颜色(测试)</button>
-    <script src="index.js"></script>
+    <script src="popup.js"></script>
   </div>
 </body>
 </html>
