update ad killer

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,20 +4,15 @@
   <meta charset="UTF-8">
   <title></title>
   <style>
-    .main {
+    #main {
       width: 300px;
       max-height: 500px;
     }
   </style>
 </head>
 <body>
-  <div class="main">
-    <h3>主要功能:</h3>
-    <ul>
-      <li>百度搜索页面增加google搜索按钮</li>
-      <li>google中点击链接将会在新标签页打开</li>
-    </ul>
-    <button id="changeColor">改变背景颜色(测试)</button>
+  <div id="main">
+    <h3>选择搜索引擎</h3>
     <script src="popup.js"></script>
   </div>
 </body>
