b站去除首页部分模块和广告，去除播放页右侧广告，完善播放页popup靠边功能

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -25,7 +25,8 @@
             :class="{'current-engine': item.active}"
             @click="handleClickEngine(index)">{{item.name}}</button>
     <h3>bilibili样式选择</h3>
-    <button @click="handleChangeBiliStyle">靠左</button>
+    <button @click="floatLeft">靠左</button>
+    <button @click="removeClass">恢复</button>
   </div>
   <script src="popup.js"></script>
 </body>
